toast exiting method in editor

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -38,7 +38,7 @@
             <EditText
                 android:id="@+id/edit_book_author"
                 style="@style/EditorFieldStyle"
-                android:hint="@string/hint_book_author"
+                android:hint="@string/hint_author"
                 android:inputType="textCapWords" />
 
 
